--- a/example/text-image/config.json
+++ b/example/text-image/config.json
@@ -11,9 +11,9 @@
     },
     "text_prefix": "",
     "use_prefix": false,
-    "image_folder": "<absolute path>/example/text-image/input_images",
+    "image_folder": "/Users/boris/Documents/GPT-ImgEval/example/text-image/input_images",
     "scroll_amount": 10,
     "save_image_delay": 15,
-    "x": 518,
-    "y": 580
+    "x": 1212,
+    "y": 425
   }
